   - Bugfix/Cleanup: Rewrite of parsing header lines that may be RFC 2047
        encoded for more RFC 2047 compliance. This also fixes the whitespace
        between two encoded words bugs (thanks to Samuel Hym for reporting
        this bug)
   - Added Samuel Hym to contributors
   - Czech translation added (thanks to Josef Vybiral)
   - Added Josef Vybiral to contributors

Version 2.1.3		2005-04-03 23:57
 * Robert Sowada
   - Changed version to 2.1.3
   - Updated po files, German translation
   - Bugfix: Detecting FAMCreated
   - Bugfix: Maildir protocol provides uid
   - Cleanup: Using glib functions for directory access (maildir)
   - Bugfix: Obtaining version of gnubiff config file
   - Bugfix: Don't parse already read messages (maildir)
   - Bugfix: Respect "use_max_mail" option (maildir)
   - Bugfix: Reading message body (file)
   - Bugfix: Don't read whole body (maildir)
   - Bugfix: Check pointers in callbacks (in "src/gui.cc")
   - Bugfix: 64bit problem (debian bug #301853); note: The same problem is
        still present multiple times in the code; added this to TODO file;
        thanks to David Mosberger for reporting and fixing this bug
   - Added David Mosberger to contributors
   - Bugfix: Corrected string size types in "src/decoding.*", "src/mailbox.*"
        "src/apop.*", "src/imap4.*", "src/maildir.*", "src/biff.*",
        "src/gtk_image_animation.*", "src/option.*", "src/mh.*",
        "src/header.*" and "src/support.*" (64bit systems)
   - Checked files for incorrect string size type without problems:
        "src/pop.*", "src/maildir.*", "src/file.*", "src/gnubiff.*",
        "src/pop3.*", "src/ui-properties.*" and "src/ui-applet-gnome.*"
   - Bugfix: Crash in image selecting dialogs (thanks to David Mosberger for
        reporting this bug)
   - Feature: More information in unknown_internal_error() provided
   - Documentation of Mailbox::parse()
   - Bugfix: Throw exception if login line cannot be created (apop)