@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: support.cc,v $
-// Revision      : $Revision: 1.19 $
-// Revision date : $Date: 2005/04/05 16:17:48 $
+// Revision      : $Revision: 1.20 $
+// Revision date : $Date: 2005/04/06 16:51:40 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : Support functions
 //
@@ -302,7 +302,7 @@ Support::unknown_internal_error_ (const gchar *file, guint line,
 	ss << "function    : " << func << "\n";
 	ss << "date        : " << __DATE__ << " " << __TIME__ << "\n";
 	ss << "gnubiff     : " << PACKAGE_VERSION << " ";
-	ss <<                     IS_CVS_VERSION ? "CVS\n" : "\n";
+	ss <<                     (IS_CVS_VERSION ? "CVS\n" : "\n");
 	ss << "\n";
 	ss << "system      : " << uts.sysname << " " << uts.release << " ";
 	ss <<                     uts.version << " " << uts.machine << "\n";
